# 100-days-of-cuda

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_single.sh  compile_commands.json  day_001_macros.h  day_001_vector_add_kernel.cu  day_001_vector_add_kernel_main.cu  day_002_002_simple_matmul_kernel_main.cu  day_002_simple_matmul_kernel.cu  day_002_simple_matmul_main.cu  day_003_color_inversion_kernel.cu  day_003_color_inversion_main.cu  day_003_vendor_libraries.h  day_004_grayscale_conversion_kernel.cu  day_004_grayscale_conversion_main.cu  day_005_005_image_blur_kernel_main.cu  day_005_image_blur_kernel.cu  day_005_image_blur_main.cu  day_006_reverse_array_kernel.cu  day_006_reverse_array_main.cu  day_007_query_device_properties_main.cu  day_007_tiled_matmul_kernel.cu  day_007_tiled_matmul_main.cu  day_008_009_generate_random_matrix_main.cu  day_008_generate_random_matrix.cu  day_008_generate_random_matrix_main.cu  day_008_generate_sequential_matrix.cu  day_008_matgen_main.cu  day_008_matmul_main.cu  day_009_mat_t_main.cu  day_009_matrix_transpose_kernel.cu  day_010_reduction_kernel.cu  day_010_vecsum_main.cu  day_011_bandwidth_profiling_cuda_main.cu  day_011_sample_profiling_cuda_main.cu  (+150 more)
.github/workflows/: cuda-test.yml
.zed/: debug.json  tasks.json
day_01/: main.cu
day_03/: main.cu
day_04/: main.cu
day_05/: Makefile
day_06/: Makefile  main.cu
day_07/: build.sh  main.cu
day_08/: main.cu  query_device_properties.cu
docs/: cmake_and_cuda.md
scripts/: batch_norm.py  monte_carlo.py  pyproject.toml
